src/main/java/com/example/ozonpriceparser/errors/ExceptionResponse.java
package com.example.ozonpriceparser.errors;

public record ExceptionResponse(String code, String exceptionTitle) {
}
